--- a/index.html
+++ b/index.html
@@ -5,11 +5,39 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
    <link rel="stylesheet" href="css/style.css">
    <title>Biglietti del Treno</title>
 </head>
 
 <body>
+   <div class="container">
+      <div class="row">
+         <!-- Titolo -->
+         <div class="col-12 text-center">
+            <h1>Calcola il prezzo del tuo Biglietto</h1>
+         </div>
+         <!-- Contenuto dati -->
+         <div id="ticket" class="col-6 offset-3 border-2 rounded-3">
+            <!-- KM -->
+            <h4 class="fw-bold text-center">KM</h4>
+            <p>KM da percorrere: <span id="km" class="fw-bold"></span></p>
+            <!-- Età -->
+            <h4 class="fw-bold text-center">ETA'</h4>
+            <p>Età del titolare del biglietto: <span id="age" class="fw-bold"></span></p>
+            <!-- Prezzo al km -->
+            <h4 class="fw-bold text-center">PREZZO AL KM</h4>
+            <p>Prezzo al KM: <strong>0.21&euro;</strong></p>
+            <!-- Sconto applicato -->
+            <h4 class="fw-bold text-center">Sconto applicato</h4>
+            <p id="applied-discount" class="fw-bold"></p>
+            <!-- Prezzo Totale -->
+            <h4 class="fw-bold text-center">prezzo totale</h4>
+            <h5 id="final-price" class="fw-bold text-center"> &euro;</h5>
+         </div>
+      </div>
+   </div>
    <script src="js/script.js"></script>
 </body>
 
