--- a/index.html
+++ b/index.html
@@ -14,27 +14,32 @@
 <body>
    <div class="container">
       <div class="row">
-         <!-- Titolo -->
-         <div class="col-12 text-center">
-            <h1>Calcola il prezzo del tuo Biglietto</h1>
-         </div>
-         <!-- Contenuto dati -->
-         <div id="ticket" class="col-6 offset-3 border-2 rounded-3">
-            <!-- KM -->
-            <h4 class="fw-bold text-center">KM</h4>
-            <p>KM da percorrere: <span id="km" class="fw-bold"></span></p>
-            <!-- Età -->
-            <h4 class="fw-bold text-center">ETA'</h4>
-            <p>Età del titolare del biglietto: <span id="age" class="fw-bold"></span></p>
-            <!-- Prezzo al km -->
-            <h4 class="fw-bold text-center">PREZZO AL KM</h4>
-            <p>Prezzo al KM: <strong>0.21&euro;</strong></p>
-            <!-- Sconto applicato -->
-            <h4 class="fw-bold text-center">Sconto applicato</h4>
-            <p id="applied-discount" class="fw-bold"></p>
-            <!-- Prezzo Totale -->
-            <h4 class="fw-bold text-center">prezzo totale</h4>
-            <h5 id="final-price" class="fw-bold text-center"> &euro;</h5>
+         <div class="row col-12 h-100 align-items-center">
+            <div class="row col-12 text-white">
+               <!-- Titolo -->
+               <div id="title" class="col-6 offset-3 text-center border-2 rounded-top">
+                  <h1>Calcola il prezzo del tuo Biglietto</h1>
+               </div>
+               <!-- Contenuto dati -->
+               <div id="ticket" class="col-6 offset-3 border-2 rounded-bottom">
+                  <!-- KM -->
+                  <h4 class="fw-bold text-center">KM</h4>
+                  <p>KM da percorrere: <span id="km" class="fw-bold"></span></p>
+                  <!-- Età -->
+                  <h4 class="fw-bold text-center">ETA'</h4>
+                  <p>Età del titolare del biglietto: <span id="age" class="fw-bold"></span></p>
+                  <!-- Prezzo al km -->
+                  <h4 class="fw-bold text-center">PREZZO AL KM</h4>
+                  <p>Prezzo al KM: <strong>0.21&euro;</strong></p>
+                  <!-- Sconto applicato -->
+                  <h4 class="fw-bold text-center">Sconto applicato</h4>
+                  <p id="applied-discount" class="fw-bold"></p>
+                  <!-- Prezzo Totale -->
+                  <h4 class="fw-bold text-center">prezzo totale</h4>
+                  <h5 id="final-price" class="fw-bold text-center border border-2 rounded-3 text-black py-2"> &euro;
+                  </h5>
+               </div>
+            </div>
          </div>
       </div>
    </div>
